@@ -1,0 +1,6 @@
+package pl.asie.endernet.api;
+
+public interface IEnderRedstone {
+	public int getRedstone();
+	public boolean setRedstone(int value);
+}
