@@ -85,5 +85,9 @@ public class BlockEnder extends BlockContainer {
     			item.stackSize = 0;
     		}
     	}
-}
+    }
+    
+    public int getRedstoneValue(World world, int x, int y, int z) {
+    	return (world.isBlockIndirectlyGettingPowered(x, y, z)  ? 1 : 0);
+    }
 }
